Update delta syntax in .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,8 @@
     pager = delta
     editor = nvim
 [delta]
-    plus-color = "#012800"
-    minus-color = "#340001"
+    plus-style = syntax "#012800"
+    minus-style = syntax "#340001"
     syntax-theme = Monokai Extended Origin
     side-by-side = true
     max-line-length = 0
